@@ -349,7 +349,8 @@ public:
 protected slots:
     void changeLocation()
     {
-        QUrl url(urlEdit->text());
+        QUrl url = guessUrlFromString(urlEdit->text());
+        urlEdit->setText(url.toString());
         view->load(url);
         view->setFocus(Qt::OtherFocusReason);
     }
@@ -386,6 +387,38 @@ protected:
                 infoSize.width(), infoSize.height());
     }
 private:
+    QUrl guessUrlFromString(const QString &string) {
+        QString urlStr = string.trimmed();
+        QRegExp test(QLatin1String("^[a-zA-Z]+\\:.*"));
+
+        // Check if it looks like a qualified URL. Try parsing it and see.
+        bool hasSchema = test.exactMatch(urlStr);
+        if (hasSchema) {
+            QUrl url(urlStr, QUrl::TolerantMode);
+            if (url.isValid())
+                return url;
+        }
+
+        // Might be a file.
+        if (QFile::exists(urlStr))
+            return QUrl::fromLocalFile(urlStr);
+
+        // Might be a shorturl - try to detect the schema.
+        if (!hasSchema) {
+            int dotIndex = urlStr.indexOf(QLatin1Char('.'));
+            if (dotIndex != -1) {
+                QString prefix = urlStr.left(dotIndex).toLower();
+                QString schema = (prefix == QLatin1String("ftp")) ? prefix : QLatin1String("http");
+                QUrl url(schema + QLatin1String("://") + urlStr, QUrl::TolerantMode);
+                if (url.isValid())
+                    return url;
+            }
+        }
+
+        // Fall back to QUrl's own tolerant parser.
+        return QUrl(string, QUrl::TolerantMode);
+    }
+
     QWebView *view;
     QLineEdit *urlEdit;
     HoverLabel *hoverLabel;
